k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vite-react-app-service
spec:
  selector:
    app: vite-react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
